--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "server": "json-server --watch src/app/_data/db.json --port 3001"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.3.1",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
@@ -22,6 +26,7 @@
     "@types/react-dom": "^19",
     "json-server": "^1.0.0-beta.3",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.5",
     "typescript": "^5"
   }
 }
